force-app/main/default/objects/UserLocation__c/UserLocation__c.object-meta.xml
<CustomObject>
    <description>Practitioner Location stores all the practitioners working in a particular location  (location here represents a record saved in the Provider Object)</description>
    <label>Practitioner Location</label>
    <nameField>
        <label>UserLocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practitioner Location</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>