force-app/main/default/objects/UserLocation__c/fields/Dropdown_Options__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_Options__c</fullName>
    <label>User List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>