force-app/main/default/objects/UserLocation__c/fields/Location_Dropdown_Options__c.field-meta.xml
<CustomField>
    <fullName>Location_Dropdown_Options__c</fullName>
    <label>Location List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>