force-app/main/default/objects/UserLocation__c/fields/Next_available_slot__c.field-meta.xml
<CustomField>
    <fullName>Next_available_slot__c</fullName>
    <label>Next available slot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>