force-app/main/default/objects/UserLocation__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Template_Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>UserLocation</relationshipLabel>
    <relationshipName>UserLocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>