force-app/main/default/objects/UserLocation__c/fields/Speciality_Name__c.field-meta.xml
<CustomField>
    <fullName>Speciality_Name__c</fullName>
    <formula>Specialty__r.Specialty_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialty Name</label>
    <type>Text</type>
</CustomField>