force-app/main/default/objects/UserLocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Practitioner__c</columns>
    <columns>Type__c</columns>
    <columns>Role__c</columns>
    <columns>User__c</columns>
    <columns>Profile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>